se agregan modales